implement most of the frontend design

--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -11,40 +11,7 @@
 
                           <div class="p-4 mt-auto">
                               <div class="row justify-content-center">
-                                  <div class="col-lg-7">
-                                      <div class="text-center">
-                                          
-                                          <h4 class="mb-3"><i class="bx bxs-quote-alt-left text-primary h1 align-middle me-3"></i><span class="text-primary">5k</span>+ Satisfied clients</h4>
-                                          
-                                          <div dir="ltr">
-                                              <div class="owl-carousel owl-theme auth-review-carousel" id="auth-review-carousel">
-                                                  <div class="item">
-                                                      <div class="py-3">
-                                                          <p class="font-size-16 mb-4">" Fantastic theme with a ton of options. If you just want the HTML to integrate with your project, then this is the package. You can find the files in the 'dist' folder...no need to install git and all the other stuff the documentation talks about. "</p>
-
-                                                          <div>
-                                                              <h4 class="font-size-16 text-primary">Abs1981</h4>
-                                                              <p class="font-size-14 mb-0">- Skote User</p>
-                                                          </div>
-                                                      </div>
-                                                      
-                                                  </div>
-
-                                                  <div class="item">
-                                                      <div class="py-3">
-                                                          <p class="font-size-16 mb-4">" If Every Vendor on Envato are as supportive as Themesbrand, Development with be a nice experience. You guys are Wonderful. Keep us the good work. "</p>
-
-                                                          <div>
-                                                              <h4 class="font-size-16 text-primary">nezerious</h4>
-                                                              <p class="font-size-14 mb-0">- Skote User</p>
-                                                          </div>
-                                                      </div>
-                                                      
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  </div>
+                                <app-auth-review-carousel></app-auth-review-carousel>
                               </div>
                           </div>
                       </div>
@@ -81,7 +48,7 @@
               
                                       <div class="mb-3">
                                           <div class="float-end">
-                                              <a href="auth-recoverpw-2.html" class="text-muted">Forgot password?</a>
+                                              <a routerLink="/forgot-password" class="text-muted">Forgot password?</a>
                                           </div>
                                           <label class="form-label">Password</label>
                                           <div class="input-group auth-pass-inputgroup">
