login done with secured routes

--- a/frontend/src/app/shared/layout/member/navbar/navbar.component.html
+++ b/frontend/src/app/shared/layout/member/navbar/navbar.component.html
@@ -165,14 +165,14 @@
         <li class="nav-item dropdown pe-3">
   
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="assets/member/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <img [src]="'http://127.0.0.1:3000/files/' + data.profileImage" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2">{{data.username}}</span>
           </a><!-- End Profile Iamge Icon -->
   
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6>{{data.username}}</h6>
+              <span>{{data.job}}</span>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -209,7 +209,7 @@
             </li>
   
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a  (click)="logout()" class="dropdown-item d-flex align-items-center" >
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
