--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -39,11 +39,16 @@
                               </div>
   
                               <div class="mt-4">
-                                  <form action="https://themesbrand.com/skote-symfony/layouts/index.html">
+                                  <form  [formGroup]="loginForm" (ngSubmit)="login()">
       
                                       <div class="mb-3">
-                                          <label for="username" class="form-label">Username</label>
-                                          <input type="text" class="form-control" id="username" placeholder="Enter username">
+                                          <label for="username" class="form-label">Email</label>
+                                          <input type="text" formControlName="email"  class="form-control" id="username" placeholder="Enter Email">
+                                          
+                                          @if(loginForm.controls['email'].touched && loginForm.controls['email'].invalid){
+                                            <p class="text-danger">invalid email</p>
+                                        }
+                                      
                                       </div>
               
                                       <div class="mb-3">
@@ -52,8 +57,13 @@
                                           </div>
                                           <label class="form-label">Password</label>
                                           <div class="input-group auth-pass-inputgroup">
-                                              <input type="password" class="form-control" placeholder="Enter password" aria-label="Password" aria-describedby="password-addon">
-                                              <button class="btn btn-light " type="button" id="password-addon"><i class="mdi mdi-eye-outline"></i></button>
+                                              <input type="password" formControlName='password' class="form-control" placeholder="Enter password" aria-label="Password" aria-describedby="password-addon">
+                                            
+                                                @if(loginForm.controls['password'].touched && loginForm.controls['password'].invalid){
+                                                  <p class="text-danger">invalid password</p>
+                                              }
+                                            
+                                              <button class="btn btn-light " [disabled]="loginForm.invalid" type="button" id="password-addon"><i class="mdi mdi-eye-outline"></i></button>
                                           </div>
                                       </div>
               
